# bert-te

./: .drone.yml  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: config.json
scripts/: Dockerfile  export_model.py  pyproject.toml
src/: bert_te.py  data.py  loading_utils.py  models.py  templates.py  utility.py
tests/api-requests/BERT TE/: GET Info.bru  XAIF Argumentation.bru  XAIF Sample.bru  bruno.json
tests/api-requests/BERT TE/environments/: (1) local.bru  (2) staging.bru  (3) production.bru
tests/api-requests/BERT TE/test-inputs/: xaif_argumentation.json  xaif_sample.json
